# quant_engine

./: .gitignore  Cargo.toml  LICENSE  README.md  TODOLIST.md  config.yaml
frontend/: app.js  index.html  style.css
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/api/handlers/: health_handler.rs  market_handler.rs  mod.rs  stock_handler.rs  strategy_handler.rs  trade_handler.rs
src/api/middleware/: auth.rs  mod.rs
src/backtest/: engine.rs  matcher.rs  mod.rs  performance.rs
src/config/: db_config.rs  mod.rs  sys_config.rs
src/data/: kline.rs  market_data.rs  mod.rs  stock.rs  user_repository.rs
src/data/repositories/: kline_repo.rs  mod.rs  stock_repo.rs
src/engine/: mod.rs  state.rs
src/exchange/: mod.rs  types.rs
src/exchange/binance/: client.rs  mod.rs  models.rs  websocket.rs
src/notify/: mod.rs
src/strategy/: context.rs  mod.rs  signal.rs  strategy_trait.rs
src/strategy/indicators/: ma.rs  macd.rs  mod.rs  rsi.rs
src/strategy/strategies/: discipline.rs  mod.rs
src/trading/: mod.rs  order.rs  position.rs  risk.rs
src/trading/broker/: mod.rs  paper.rs
src/utils/: datetime.rs  decimal.rs  mod.rs
tests/: config_test.rs  user_repository_test.rs
