[package]
name = "QuantEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
lazy_static = "1.5.0"
mysql = "26.0.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.21.3"

[lib]
name = "quant_engine"  # 明确声明库名（可选）
path = "src/lib.rs"