[package]
name = "QuantEngine"
version = "0.1.0"
edition = "2021"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "chrono", "rust_decimal"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 全局状态
once_cell = "1.21"
lazy_static = "1.5"

# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 日志追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 精确数值计算
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# Redis 缓存
redis = { version = "0.25", features = ["tokio-comp"] }

# HTTP 客户端 (数据采集)
reqwest = { version = "0.11", features = ["json"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# 异步 trait
async-trait = "0.1"

[lib]
name = "quant_engine"
path = "src/lib.rs"

[[bin]]
name = "quant_engine"
path = "src/main.rs"