[package]
name = "quant_engine"
version = "0.2.0"
edition = "2021"
description = "Crypto Futures Trading Engine - Binance & OKX"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "chrono", "rust_decimal"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 全局状态
once_cell = "1.21"
lazy_static = "1.5"

# Web 框架
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# 日志追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# 精确数值计算
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.33"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# HTTP 客户端 (交易所 API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket 客户端 (交易所行情)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HMAC 签名 (交易所 API 认证)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# 异步 trait
async-trait = "0.1"

# URL 编码
url = "2.5"

# 并行计算
rayon = "1.8"

[lib]
name = "quant_engine"
path = "src/lib.rs"

[[bin]]
name = "quant_engine"
path = "src/main.rs"